# FindingCornersOpenCV

./: CMakeLists.txt  ImgConverterQTvsOpenCV.h  ImgEffectsManager.cpp  ImgEffectsManager.h  ImgEffectsWorkerThread.cpp  ImgEffectsWorkerThread.h  main.cpp  mainwindow.cpp  mainwindow.h
